_build/html/reports/Strassen_Algorithm_Exercise.log
Traceback (most recent call last):
  File "/opt/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1087, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 74, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 53, in just_run
    return loop.run_until_complete(coro)
  File "/opt/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 540, in async_execute
    await self.async_execute_cell(
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 832, in async_execute_cell
    self._check_raise_for_error(cell, exec_reply)
  File "/opt/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 740, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply['content'])
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def matrix_times_matrix(A,B):
    """
    A,B are numpy arrays such that A*B is defined.
    The function returns a numpy array C which is the Matrix product of A and B
    """
    
    n,k=A.shape
    k,m=B.shape


    C=np.zeros(# define here the shape of the resulting matrix c

    for i in range(n):
        for j in range(m):
            for s in range(k):
                C[i,j]+= # Add the corresponding number according to the sum Formula 

    return C
------------------

[0;36m  File [0;32m"<ipython-input-2-3726d2fd48b2>"[0;36m, line [0;32m13[0m
[0;31m    for i in range(n):[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-2-3726d2fd48b2>, line 13)

